# PEGASUS_metadata_template

./: .gitignore  pyproject.toml  readme.md
docs/: decisions.md  metadata_validation.md
schema_defintation/: basic_schema.py  control_verb.py  evidence_schema.py  integration_schme.py  method_schema.py  source_schema.py
src/pegasus/: main.py
src/pegasus/schema/: constant.py  core.py  peg_list_schema.py  peg_matrix_schem.py
src/pegasus/schema/peg_metadata_schema/: metadata_basic_schema.py  metadata_evidence_schema.py  metadata_integration_schme.py  metadata_method_schema.py  metadata_source_schema.py
src/pegasus/template_convert/: __init__.py  json_builder.py  spreadsheet_builder.py  yaml_builder.py
src/pegasus/validation/: __init__.py  list_validation.py  matrix_validation.py  metadata_validation.py
template_creation/: spreadsheet_builder.py
templates/: metadata_peg_template.xlsx  peg_template.xlsx
test_data/: CATALOG.md  list_toydata_PEGSt000000.tsv  matrix_toydata_PEGSt000000.tsv  metadata_peg.xlsx  toy_data_metadata.json  toy_data_metadata.yaml  toydata_metadata_template_PEGSt000000.xlsx
test_data/real_data/: PEG_dummy_submission_data_explanation.docx  list_Aragam_PEGSt000007.tsv  matrix_Aragam_PEGSt000007.tsv  metadata_Aragam_PEGSt000007.xlsx
test_data/toy_data/: list_toydata_PEGSt000000.tsv  matrix_toydata_PEGSt000000.tsv  metadata_toydata_PEGSt000000.xlsx
tests/: test_convert_schema_to_xlxs.py  test_validation_cross_check.py  test_validation_list.py  test_validation_matrix.py  test_validation_metadata.py
